# ML

./: CMakeLists.txt  ML.cpp  README.md  StdAfx.h
CNN/include/: mwAdamOptimizer.hpp  mwCNN.hpp  mwCNNUtils.hpp  mwConcatLayer.hpp  mwConv2dLayer.hpp  mwDropOutLayer.hpp  mwFCLayer.hpp  mwHeInitialization.hpp  mwInitialization.hpp  mwLayer.hpp  mwLayerSerializer.hpp  mwLossFunction.hpp  mwMSELossFunction.hpp  mwMaxPoolLayer.hpp  mwOptimizer.hpp  mwReluLayer.hpp  mwSigmoid.hpp  mwSoftMax.hpp  mwTensor.hpp  mwUpsamplingLayer.hpp  mwZeroPaddingLayer.hpp
CNN/src/: mwAdamOptimizer.cpp  mwCNN.cpp  mwCNNUtils.cpp  mwConcatLayer.cpp  mwConv2dLayer.cpp  mwCrossEntropyLossFunction.cpp  mwDropOutLayer.cpp  mwFCLayer.cpp  mwHeInitialization.cpp  mwLayer.cpp  mwMSELossFunction.cpp  mwMaxPoolLayer.cpp  mwOptimizer.cpp  mwReluLayer.cpp  mwSigmoid.cpp  mwSoftMax.cpp  mwTensor.cpp  mwUpsamplingLayer.cpp  mwZeroPaddingLayer.cpp
IO/include/: dmBinaryStream.hpp  dmDataReader.hpp  dmPainterIO.hpp
IO/src/: dmBinaryStream.cpp  dmDataReader.cpp  dmPainterIO.cpp
math/include/: dmLDLDecompose.hpp  dmLUDecompose.hpp  dmMatrix.hpp
stats/include/: dmDataCollector.hpp  dmImageUtils.hpp  dmNeuralNetwork.hpp  dmOptimizer.hpp  dmRGBImage.hpp  dmStatsCore.hpp  mwUnetCreator.hpp
stats/layers/include/: dmBiasLayer.hpp  dmConvolutionalLayer.hpp  dmFullyConnectedLayer.hpp  dmHyperbolicTan.hpp  dmLayer.hpp  dmLayers.hpp  dmLinearMultLayer.hpp  dmOutputLayer.hpp  dmReLULayer.hpp
stats/src/: dmImageUtils.cpp  mwUnetCreator.cpp
